Website Update end of August

--- a/aboutme.html
+++ b/aboutme.html
@@ -44,21 +44,11 @@
             <!-- <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the
                 design for the logo. The reasoning is simple, Smeet means to smile.</p> -->
             <p style="color: black">
-                I am an aspiring software developer who, through experience has gained technical and interpersonal
-                skills. I have almost finished my <u>Master of Software Development</u> degree and have completed <u>Bachelor
-                    of
-                    Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation and
-                    information systems with an
-                    IT specialisation. I am passionate about <em>web and mobile development with a UX focus</em>. I am
-                    developing my
-                    skills</em> in software programming to expand on my technical skills by completing a Masters at VUW
-                and
-                doing various programming projects in my spare time.
-                <!-- I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>
-                having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information
-                    systems with an IT specialisation<em>. I am developing my skills in software programming to expand
-                        on my technical skills by completing a Masters at VUW and doing various programming projects in
-                        my spare time. -->
+                I am an IT consultant at a global firm, and through experience and tertiary studies, I have gained technical and interpersonal skills. 
+                I have finished my <u>Masters of Software Development</u> qualification through the school and Engineering and Computers Sciences at Victoria University of Wellington. 
+                This supplements my undergraduate qualification of <u>Bachelor of Commerce degree</u>, in which I was able to acquire knowledge in the fields of accountancy, taxation and information systems with an IT specialisation. 
+                My passion lies in the field of application development, intelligent automation and integration of technologies. My knowledge and skill base in these fields is allowed to continually grow as I look for opportunities which would benefit my software programming skillset.  
+                The completion of various programming projects in my spare time for organisations and myself have ensured that my technical skills constantly evolve. 
             </p>
             <div class="row">
                 <div class="column">
@@ -87,23 +77,15 @@
                     <br><br>
                 </div>
             </div>
-            <p style="color: black">When I am not studying, you will find me reading about new technologies, the
-                current affairs
-                or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand
-                Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a
-                creative minded person, I enjoy thinking about new ways to improve things, to build solutions for
-                issues. I believe that to predict the future; you have to create the future or very much be part of the
-                forefront of changing technology and being innovative.</p>
-            <p style="color: black">Currently, I am working on updating and adding past projects to the website and
-                enhancing the
-                user experience. Along with the site, I am learning Android Studio and looking to convert java
-                applications to Android apps. I am also planning to make a native application for construction
-                projects, to improve communication between key stakeholders from a financial perspective adding more
-                transparency to the building process.</p>
+            <p style="color: black">When I am not working, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling),
+                 playing Fifa or Spiderman, watching shows such as The Grand Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a creative-minded person, 
+                 I enjoy thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the 
+                 forefront of changing technology and being innovative.</p>
+            <!--  -->
             <!--enable for the flex tiles row and col--->
-
+<diV style="display: none">
             <div class="wrap-collabsible">
-                <input id="collapsible" class="toggle" type="checkbox">
+                <input id="collapsible" class="toggle" type="checkbox" disabled>
                 <label for="collapsible" class="lbl-toggle">My Experience and Skills</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
@@ -137,32 +119,12 @@
                                 <td>LINQ, Google Analytics, Bizagi and MS Visio (Conway’s Game Java with UML)</td>
                             </tr>
                         </table>
-                        <!-- <li>tobechanged</li>
-                        <li>SQLite</li>
-                        <li>Android Studio (Native apps)</li>
-                        <li>PostgreSQL & MongoDB (Not only SQL)</li>
-                        <li>HTML 5 & CSS 3</li>
-                        <li>PHP with MariaDB</li>
-                        <li>Angular JS 6 with JSON and Trello scrum board (Single page application)</li>
-                        <li>JavaScript</li>
-                        <li>Kaggle (machine learning) with Python</li>
-                        <li>Jutinmind Prototyper, Pencil (UX)</li>
-                        <li>Adobe Creative Suite (PhotoShop, illustrator & Indesign)</li>
-                        <li>Microsoft Visio (Use case diagrams, Activity Diagram, CRC Cards, Class Diagram, Sequence
-                            Diagram, Crows-foot and high level architecture diagram</li>
-                        <li>Microsoft Excel for complicated tasks such as recording Marcos, writing complex Formulas</li>
-                        <li>LINQ (information flow mapping application)</li>
-                        <li>Google Analytics</li>
-                        <li>Raspbian (pi)</li>
-                        <li>Sketch-Up, SU podium</li>
-                        <li>Microsoft PowerPoint for designing visually effective presentations</li>
-                        <li>WordPress</li> -->
                     </div>
                 </div>
             </div>
             <input id="collapsible4" class="toggle" type="checkbox" checked>
             <div class="wrap-collabsible1">
-                <input id="collapsible1" class="toggle" type="checkbox">
+                <input id="collapsible1" class="toggle" type="checkbox" disabled>
                 <label for="collapsible1" class="lbl-toggle">Work Experience</label>
                 <div class="collapsible-content1">
                     <div class="content-inner1">
@@ -230,7 +192,7 @@
                             <div class="column">
                                 <br>
                                 <div class="hoverOverImage">
-                                    <img src="AboutMe/shop1.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
+                                    <img src="AboutMe/"<!-- shop --------------> alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
                                     <div class="hoverOverImage-layer_top">
                                         <div class="hoverOverImage-text">Rendering of the Family-owned store</div>
                                     </div>
@@ -243,7 +205,7 @@
             </div>
             <input id="collapsible4" class="toggle" type="checkbox" checked>
             <div class="wrap-collabsible2">
-                <input id="collapsible2" class="toggle" type="checkbox">
+                <input id="collapsible2" class="toggle" type="checkbox" disabled>
                 <label for="collapsible2" class="lbl-toggle">Other Experience</label>
                 <div class="collapsible-content2">
                     <div class="content-inner2">
@@ -311,7 +273,7 @@
             </div>
             <input id="collapsible2" class="toggle" type="checkbox" checked>
             <div class="wrap-collabsible3">
-                <input id="collapsible3" class="toggle" type="checkbox">
+                <input id="collapsible3" class="toggle" type="checkbox" disabled>
                 <label for="collapsible3" class="lbl-toggle">Education</label>
                 <div class="collapsible-content3">
                     <div class="content-inner3">
@@ -352,6 +314,7 @@
             </div>
         </div>
         <br>
+    </diV>
     </div>
     <!-- <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a> -->
     <footer class="footer">
