--- a/mywork.html
+++ b/mywork.html
@@ -37,6 +37,8 @@
    <img src="Webimages/myworkbanner.png" alt="my work banner" class="cenBanner">
    <img src="Webimages/myworksqarebanner.png" alt="my work banner" class="cenBannersquare">
    <div id="overview"></div>
+<br>
+   <p style="color: orange" id="clickblog"><span style="font-size: calc(0.2vw + 9px); color: red">Some project links have been redirected or removed. Please request Link via email.</span></p>
    <!-- <div class="bannerContainer">
          <img src="p41.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
          <div class="bottom-left">
@@ -61,10 +63,10 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="dimmuBurger.html"></a>
+                        <a id="share" class="share-toggle share-icon" href="https://dimmuburgers.herokuapp.com/"></a>
                      </div>
                      <article class="card__article">
-                        <h3><a href="dimmuBurger.html">Dimmu Burger (Group Project) </a></h3>
+                        <h3><a href="https://dimmuburgers.herokuapp.com/">Dimmu Burger (Group Project) </a></h3>
                         <p>I was a Lead Web Developer for group project which was to create a web application that
                            allows customers to create customised burger and java production line. </p>
                         <br>
@@ -86,10 +88,10 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="2Shakes.html"></a>
+                        <a id="share" class="share-toggle share-icon" href="#"></a>
                      </div>
                      <article class="card__article">
-                        <h3><a href="2Shakes.html">2Shakes CX Redesign</a></h3>
+                        <h3><a href="#">2Shakes CX Redesign</a></h3>
                         <p>A team project in which we redesigned the user interface and experience by creating a
                            high-fidelity prototype for setting up a new profile for the 2Shakes web application.</p>
                      </article>
@@ -104,15 +106,15 @@
                         <img src="Webimages/conwaysMe.jpeg" alt="Pair programming and leading" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="Conway'sGameofLife.html">Java</a>
+                        <a href="#">Java</a>
                         <time>August 2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="Conway'sGameofLife.html"></a>
+                           <a id="share" class="share-toggle share-icon" href="#"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="Conway'sGameofLife.html">Conway's Game of Life</a></h3>
+                           <h3><a href="#">Conway's Game of Life</a></h3>
                            <p>In a team designing & developing JavaFX application for Conway's Game of Life. Facing challenges with git lab and merge conflicts.</p>
                         </article>
                      </div>
@@ -152,15 +154,15 @@
                      <img src="projects/myBank/myBankMyworkpicture.PNG" alt="My Bank" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
-                     <a href="mybank.html">Python and C#</a>
+                     <a href="#">Python and C#</a>
                      <time>2018</time>
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="mybank.html"></a>
+                        <a id="share" class="share-toggle share-icon" href="#"></a>
                      </div>
                      <article class="card__article">
-                        <h3><a href="mybank.html">My Bank </a></h3>
+                        <h3><a href="#">My Bank </a></h3>
                         <p>My bank is a banking system application in Python and C# that has basic transactional
                            features and uses APIs for currency conversion.</p>
                         <br>
@@ -201,7 +203,7 @@
                      <img src="projects/CyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
-                     <a href="#">Web Development</a>
+                     <a href="CyberCV.html">Web Development</a>
                      <time>2015</time>
                   </div>
                   <div class="card__content card__padding">
@@ -225,15 +227,15 @@
                      <img src="projects/fansite/fansitenav.png" alt="Pair programming and leading" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
-                     <a href="Vkfansite.html">Web Development</a>
+                     <a href="http://smeet-patel.com/Fan-Site-VK/">Web Development</a>
                      <time>Late 2015</time>
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="Vkfansite.html"></a>
+                        <a id="share" class="share-toggle share-icon" href="http://smeet-patel.com/Fan-Site-VK/"></a>
                      </div>
                      <article class="card__article">
-                        <h3><a href="Vkfansite.html">Virat Kohli Fan Site</a></h3>
+                        <h3><a href="http://smeet-patel.com/Fan-Site-VK/">Virat Kohli Fan Site</a></h3>
                         <p>In 2014, the Indian cricket team toured New Zealand which Virat Kohli played exceptionally
                            during the tour. To improving my web development skills, I decided to create a fan site for
                            Virat Kohli.</p>
