Update to website 2021
Remove about me and adding para to home page. Fixing links and updating site for 2021.

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
         <!-- <a href="mycon.html">CONTACT</a> -->
         <a href="myblog.html">BLOG</a>
         <a href="mywork.html">MY WORK</a>
-        <a href="aboutme.html">ABOUT ME</a>
+        <!-- <a href="aboutme.html">ABOUT ME</a> -->
         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
     </div>
     <br>
@@ -43,13 +43,13 @@
         <div id="lineA">
             <!-- <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the
                 design for the logo. The reasoning is simple, Smeet means to smile.</p> -->
-            <p style="color: black">
+            <!-- <p style="color: black">
                 I am an IT consultant at a global firm, and through experience and tertiary studies, I have gained technical and interpersonal skills. 
                 I have finished my <u>Masters of Software Development</u> qualification through the school and Engineering and Computers Sciences at Victoria University of Wellington. 
                 This supplements my undergraduate qualification of <u>Bachelor of Commerce degree</u>, in which I was able to acquire knowledge in the fields of accountancy, taxation and information systems with an IT specialisation. 
                 My passion lies in the field of application development, intelligent automation and integration of technologies. My knowledge and skill base in these fields is allowed to continually grow as I look for opportunities which would benefit my software programming skillset.  
                 The completion of various programming projects in my spare time for organisations and myself have ensured that my technical skills constantly evolve. 
-            </p>
+            </p> -->
             <div class="row">
                 <div class="column">
                     <br>
