--- a/index.html
+++ b/index.html
@@ -32,23 +32,33 @@
         <!-- <a href="mycon.html">CONTACT</a> -->
         <a href="myblog.html">BLOG</a>
         <a href="mywork.html">MY WORK</a>
-        <a href="aboutme.html">ABOUT ME</a>
+        <!-- <a href="aboutme.html">ABOUT ME</a> -->
         <!--Shows menubutton when screen is small -->
         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
     </div>
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
     <br>
-    <img src="Webimages/business banner.png" alt="Smeet" class="cenBanner">
+    <img src="Webimages/business banner1.png" alt="Smeet" class="cenBanner">
     <img src="Webimages/smeet.png" alt="Smeet" class="cenBanner1">
+    <div class="centerWrap">
     <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p>
     <p class="centText" align="center">
-        I am passionate about technology and how it can be used to create solve business issues. I also enjoy coding, doing DIY projects and going on adventures which can be followed on my blog.
-        <!-- Being an aspiring software developer, I am passionate about web and mobile development. I like to bring
-        innovation and change together. -->
+        I am passionate about technology and how it can be used to create solve business issues. I also enjoy coding, gaming, doing DIY projects and going on hikes.
+        <!-- Being an aspiring software developer, I am passionate about web and mobile development. I like to bring innovation and change together. -->
 
         <!-- I am passionate about web and mobile development.  -->
         <!-- I am a travel enthusiast. An aspiring software developer. -->
+    </p>
+    <br>
+    <hr>
+    <p>
+        Kia Ora, I'm Smeet from Wellington. I am a Technology Consultant at a global firm with experience in Azure data & integration (D&I) and Salesforce projects. Having studied at Victoria University of Wellington, 
+        I have completed a <U>Masters of Software Development</U> (achieved with High Distinction) degree and a <u>Bachelor of Commerce</u> degree majoring in accountancy and information systems. 
+        I am passionate about application development and the data domain (Business intelligence & Data engineering). 
+    </p>
+    <p>
+        When I am not working, you will find me exploring places (hiking and travelling), playing badminton, watching TV shows like The Grand Tour, The Block NZ, Grand Designs and spending time with family and friends. 
     </p>
 
     <div class="sticky">
@@ -56,7 +66,7 @@
     </div>
     <hr>
     <!-- Index Page sports titles ------------------------------>
-    <div class="centerWrap">
+
         <!--Centering everything in the div-->
         <!--enable for the flex tiles row and col--->
         <div class="row">
