--- a/mycon.html
+++ b/mycon.html
@@ -29,7 +29,7 @@
 			<a href="mycon.html">CONTACT</a>
 			<a href="myblog.html">BLOG</a>
 			<a href="mywork.html">MY WORK</a>
-			<a href="aboutme.html">ABOUT ME</a>
+			<!-- <a href="aboutme.html">ABOUT ME</a> -->
 			<a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
 		</div>
 
