--- a/mywork.html
+++ b/mywork.html
@@ -29,7 +29,7 @@
       <!-- <a href="mycon.html">CONTACT</a> -->
       <a href="myblog.html">BLOG</a>
       <a href="mywork.html">MY WORK</a>
-      <a href="aboutme.html">ABOUT ME</a>
+      <!-- <a href="aboutme.html">ABOUT ME</a> -->
       <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
    </div>
    <br>
@@ -38,7 +38,7 @@
    <img src="Webimages/myworksqarebanner.png" alt="my work banner" class="cenBannersquare">
    <div id="overview"></div>
 <br>
-   <p style="color: orange" id="clickblog"><span style="font-size: calc(0.2vw + 9px); color: red">Some project links have been redirected or removed. Please request Link via email.</span></p>
+   <!-- <p style="color: orange" id="clickblog"><span style="font-size: calc(0.2vw + 9px); color: red">Some project links have been redirected or removed. Please request Link via email.</span></p> -->
    <!-- <div class="bannerContainer">
          <img src="p41.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
          <div class="bottom-left">
@@ -63,7 +63,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="https://dimmuburgers.herokuapp.com/"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="https://dimmuburgers.herokuapp.com/"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="https://dimmuburgers.herokuapp.com/">Dimmu Burger (Group Project) </a></h3>
@@ -88,7 +88,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="#"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="#"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="#">2Shakes CX Redesign</a></h3>
@@ -111,7 +111,7 @@
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                           <!-- <a id="share" class="share-toggle share-icon" href="#"></a> -->
                         </div>
                         <article class="card__article">
                            <h3><a href="#">Conway's Game of Life</a></h3>
@@ -134,7 +134,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="everest.html"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="everest.html"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="everest.html">Everest Andriod Web Broswer </a></h3>
@@ -159,7 +159,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="#"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="#"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="#">My Bank </a></h3>
@@ -184,7 +184,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="centralPolice.html"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="centralPolice.html"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="centralPolice.html">Central Police</a></h3>
@@ -208,7 +208,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="CyberCV.html"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="CyberCV.html"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="CyberCV.html">Cyber CV 2015 </a></h3>
@@ -227,12 +227,12 @@
                      <img src="projects/fansite/fansitenav.png" alt="Pair programming and leading" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
-                     <a href="http://smeet-patel.com/Fan-Site-VK/">Web Development</a>
+                     <!-- <a href="http://smeet-patel.com/Fan-Site-VK/">Web Development</a> -->
                      <time>Late 2015</time>
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="http://smeet-patel.com/Fan-Site-VK/"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="http://smeet-patel.com/Fan-Site-VK/"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="http://smeet-patel.com/Fan-Site-VK/">Virat Kohli Fan Site</a></h3>
@@ -257,7 +257,7 @@
                   </div>
                   <div class="card__content card__padding">
                      <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="hackathon.html"></a>
+                        <!-- <a id="share" class="share-toggle share-icon" href="hackathon.html"></a> -->
                      </div>
                      <article class="card__article">
                         <h3><a href="hackathon.html">WLG Science Hackathon 2018</a></h3>
@@ -281,7 +281,7 @@
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="sportsWorld.html"></a>
+                           <!-- <a id="share" class="share-toggle share-icon" href="sportsWorld.html"></a> -->
                         </div>
                         <article class="card__article">
                            <h3><a href="sportsWorld.html">Sports World</a></h3>
@@ -304,7 +304,7 @@
                         </div>
                         <div class="card__content card__padding">
                            <div class="card__share">
-                              <a id="share" class="share-toggle share-icon" href="wellingtonTransportation.html"></a>
+                              <!-- <a id="share" class="share-toggle share-icon" href="wellingtonTransportation.html"></a> -->
                            </div>
                            <article class="card__article">
                               <h3><a href="wellingtonTransportation.html">Wellington Transportation</a></h3>
