--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
     <br>
-    <img src="Webimages/2021banner1.png" alt="Smeet" class="cenBanner">
+    <img src="Webimages/newcover.png" alt="Smeet" class="cenBanner">
     <img src="Webimages/smeet.png" alt="Smeet" class="cenBanner1">
     <div class="centerWrap">
     <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p>
