--- a/myblog.html
+++ b/myblog.html
@@ -23,6 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
 </head>
 
 <body>
@@ -64,7 +65,7 @@
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
 				frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe> -->
         <p style="color: orange" id="clickblog">Click on a marker to read the blog.<br><span style="font-size: calc(0.2vw + 9px); color: red">If the map does not load, please refresh the page. </span>
-            <br><span style="font-size: calc(0.2vw + 9px); color: deepskyblue">(Hong Kong, Macau, Shenzhen, Bangkok, Penang & KL blogs coming soon.)</span></p>
+            <br><span style="font-size: calc(0.2vw + 9px); color: deepskyblue">(Hong Kong, Macau, Shenzhen, Bangkok, Penang, KL & US blogs coming soon.)</span></p>
         <!-- <p style="color: orange" id="clickblog;" style="font-size: 0.5vh"></p>If the map does not load, please refresh the page.</p> -->
         <!-- <p id="demo">Testing purposes</p> -->
     </div>
