index.html checks

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <br>
     <hr>
     <p>
-        Kia Ora, I'm Smeet from Wellington. I am a Technology Consultant at a global firm with experience in Azure data & integration (D&I) and Salesforce projects. Having studied at Victoria University of Wellington, 
+        Kia Ora, I'm Smeet from Wellington. I am a Technology Consultant at a global firm with experience in Power Platform, data analytics, Azure data & integration (D&I) and Salesforce projects. Having studied at Victoria University of Wellington, 
         I have completed a <U>Masters of Software Development</U> (achieved with High Distinction) degree and a <u>Bachelor of Commerce</u> degree majoring in accountancy and information systems. 
         I am passionate about application development and the data domain (Business intelligence & Data engineering). 
     </p>
